--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
   <fragment
     android:id="@+id/permissionFragment"
-    android:name="com.muchori.joseph.distancetracker.PermissionFragment"
+    android:name="com.muchori.joseph.distancetracker.ui.permission.PermissionFragment"
     android:label="fragment_permission"
     tools:layout="@layout/fragment_permission" >
     <action
@@ -18,7 +18,7 @@
   </fragment>
   <fragment
     android:id="@+id/mapsFragment"
-    android:name="com.muchori.joseph.distancetracker.MapsFragment"
+    android:name="com.muchori.joseph.distancetracker.ui.maps.MapsFragment"
     android:label="fragment_maps"
     tools:layout="@layout/fragment_maps" >
     <action
@@ -27,7 +27,7 @@
   </fragment>
   <fragment
     android:id="@+id/resultFragment"
-    android:name="com.muchori.joseph.distancetracker.ResultFragment"
+    android:name="com.muchori.joseph.distancetracker.ui.result.ResultFragment"
     android:label="fragment_result"
     tools:layout="@layout/fragment_result" >
     <action
