Map resetting to current location after stopping

--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -21,7 +21,7 @@
     android:id="@+id/distance_value_textView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="0.0km"
+    android:text="@string/_0_0km"
     android:textColor="@color/black"
     android:textSize="30sp"
     android:textStyle="bold"
@@ -43,7 +43,7 @@
     android:id="@+id/time_value_textView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="00:00:00"
+    android:text="@string/_00_00_00"
     android:textColor="@color/black"
     android:textSize="30sp"
     android:textStyle="bold"
